kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pawel-db-app
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: falcon
